# fmt-nonstdstring

./: CMakeLists.txt  README.md
nonstdstring/: CMakeLists.txt  nonstdstring.cpp
nonstdstring/include/nonstdstring/: nonstdstring.h
test_nonstdstring/: CMakeLists.txt  test_nonstdstring.cpp
